--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,16 +22,18 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Kata4.jar
+dist.jar=${dist.dir}/Kata6.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcommon-1.0.23.jar=C:\\Users\\usuario\\Desktop\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\usuario\\Desktop\\jfreechart-1.0.19.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Entrar\\Desktop\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=kata4.main.Main
+main.class=kata6.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
